# Test_task_chat_api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/models/: chat.py  message.py
app/routers/: chat.py  message.py
app/schemas/: chat.py  message.py
migration/: env.py
migration/versions/: d9be7a74c9ba_initial_chat_and_message_tables.py
tests/: conftest.py  test_chats.py
